# Q

./: .coverage  .gitignore  LICENSE  README.md  coverage.xml  pyproject.toml  pytest.ini
.github/workflows/: tests.yml
backtester/: README.md  data.py  engine.py  strategy.py  trades.py  utils.py
docs/backtester_gui/: API_REFERENCE.md  DEVELOPER_GUIDE.md  USER_GUIDE.md
examples/: backtester_gui_example.py  ccm_simple_macrossover_backtest.py
examples/data/: ccm_60min.csv
examples/strategies/: New Strategy.json  test.json
optimization/: get_data_from_mt5.py  optimize_signal_selection.py
scripts/analysis/: plot_candlestick_with_indicators.py
scripts/backtest/: ccm_test.py  dol_test.py  instrucao.md
scripts/optimization/: ccm_test.py  example.py
src/backtester/: README.md  __init__.py  data.py  engine.py  evaluation.py  pyproject.toml  strategy.py  trades.py  utils.py
src/backtester/backtester.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/backtester/gui/: README.md  __init__.py  main_window.py  theme.py
src/backtester/gui/controllers/: __init__.py  execution_controller.py  strategy_controller.py
src/backtester/gui/data/: __init__.py  config_presets.json
src/backtester/gui/dialogs/: __init__.py  data_import.py  parameter_edit.py  strategy_save.py
src/backtester/gui/models/: __init__.py  backtest_model.py  strategy_model.py
src/backtester/gui/saved_strategies/: test.json
src/backtester/gui/theme/: __init__.py
src/backtester/gui/utils/: __init__.py  undo_stack.py
src/backtester/gui/widgets/: __init__.py  backtest_config.py  data_config.py  execution_monitor.py  results_panel.py  signal_library.py  strategy_builder.py
src/bridge/: README.md  __init__.py  data_manager.py
src/data/: __init__.py  base.py  candle_data.py  store.py  tick_data.py
src/helper/: __init__.py  files.py
src/indicators/: README.md  __init__.py  market_regime_classifier.py
src/optimizer/: README.md  __init__.py  database.py  engine.py  pyproject.toml
src/q.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/strategies/: README.md  __init__.py  archetypes.py  combiners.py  composite.py  (+1 more)
tests/: README.md  __init__.py  conftest.py
visualizer/: __init__.py  pyproject.toml  window.py
visualizer/plots/: __init__.py
(+1326 files in other folders)
