[project]
name = "q"
version = "0.1.0"
description = "Add your description here"
requires-python = "==3.10"
dependencies = [
    "black>=25.1.0",
    "metatrader5>=5.0.5200",
    "pyqtgraph==0.13.7",
    "pyside6==6.7.2",
    "flask==3.0.3",
    "tqdm>=4.67.1",
    "pandas-ta==0.3.14b0",
    "setuptools>=80.9.0",
    "numpy>=1.26.4"
]

[tool.black]
line-length = 88
skip-string-normalization = true
