[project]
name = "q"
version = "0.1.0"
description = "Add your description here"
requires-python = "==3.10.*"
dependencies = [
    "black>=25.1.0",
    "metatrader5>=5.0.5200",
    "pyqtgraph==0.13.7",
    "pyside6==6.7.2",
    "flask==3.0.3",
    "tqdm>=4.67.1",
    "pandas===2.2.2",
    "setuptools>=80.9.0",
    "numpy>=1.26.4",
    "backtester",
    "visualizer",
    "optuna>=3.6.1",
    "docutils>=0.22",
    "pandas-ta==0.3.14b0",
    "coverage>=7.10.6",
    "pytest>=8.4.2",
    "optuna-dashboard>=0.14.0",
    "psycopg2-binary>=2.9.9",
    "rich>=14.1.0",
    "pyarrow>=21.0.0",
    "pytest-cov>=7.0.0",
    "matplotlib>=3.10.7",
]

[tool.black]
line-length = 88
skip-string-normalization = true

[tool.uv.workspace]
members = [
    "src/backtester",
    "src/visualizer",
    "src/optimizer",
]

[tool.uv.sources]
backtester = { workspace = true }
visualizer = { workspace = true }
optimizer = { workspace = true }
pandas-ta = { path = "vendors/pandas_ta" }
